app/assets/stylesheets/foundation_and_overrides.scss
@import "foundation/common/ratios";

// Settings file containing Foundation defaults

// Grid Settings

// $rowWidth: 1000px;
// $columnGutter: 30px;
// $totalColumns: 12;
// $mobileTotalColumns: 4;

// Colors Settings

// $mainColor: #2ba6cb;
// $secondaryColor: #e9e9e9;
// $alertColor: #c60f13;
// $successColor: #5da423;
// $txtColor: #222;
// $highlightColor: #ffff99;
// $black: #000;
// $white: #fff;
// $shinyEdge: rgba(#fff, .5);
// $darkEdge: rgba(#000, .2);

// Typography Settings

// $headerFontFamily: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
// $headerFontWeight: bold;
// $headerFontColor: #222;
// $bodyFontFamily: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
// $bodyFontWeight: normal;
// $bodyFontColor: #222;

// Button Settings

// $buttonRadius: 3px;
// $btnBase: 10px;

// $tinyBtnBase: $btnBase - 5;
// $smallBtnBase: $btnBase - 3;
// $largeBtnBase: $btnBase + 5;

// Form Settings

// $formSpacing: 12px;

// Tab Settings

// $tabHeight: 40px;

// Nav Bar Settings

// $navBarHeight: 40px;
// $navFlyoutBaseWidth: 250px;

// Modular Scale
// $ratio: $golden;
// $baseFontSize: 14px;
// $importantModNum: 44px;

// Tooltip Settings
// $hasTipBorderBottom: dotted 1px #ccc;
// $hasTipFontWeight: bold;
// $hasTipFontColor: #333;
// $hasTipBorderBottomHover: dotted 1px darken($mainColor, 20%);
// $hasTipFontColorHover: $mainColor;
// $tooltipBackgroundColor: #000;
// $tooltipBackgroundOpacity: 0.85;
// $tooltipFontSize: 12;
// $tooltipFontWeight: bold;
// $tooltipFontColor: #fff;
// $tapToCloseFontSize: 10;
// $tapToCloseFontWeight: normal;
// $tapToCloseFontColor: #888;
// $tooltipFontSizeScreenSmall: 14;
// $tooltipBackgroundOpacityScreenSmall: 0.85;
@import 'foundation';

